[metadata]
name = graviton
version = 2014.2
summary = OpenStack Bare Metal Provisioning via MAAS
description-file =
    README.rst
author = Kapil Thangavelu
author-email = kapil.foss@gmail.com
home-page = http://www.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 2.6

[files]
packages =
    graviton

[entry_points]
console_scripts =
    graviton-rootwrap = oslo.rootwrap.cmd:main


[pbr]
autodoc_index_modules = True

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[egg_info]
tag_build =
tag_date = 0
tag_svn_revision = 0

[compile_catalog]
directory = graviton/locale
domain = graviton

[update_catalog]
domain = graviton
output_dir = graviton/locale
input_file = graviton/locale/graviton.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = graviton/locale/graviton.pot

[wheel]
universal = 1
